# cortex-mem

./: .gitignore  AGENTS.md  AGENT_TOOLS_UPGRADE_ANALYSIS.md  BOT_MEMORY_ISOLATION_FIX.md  BOT_MEMORY_PATH_FIX.md  CHANGELOG_2026-02-10.md  CLEANUP_COMPLETE_REPORT.md  CONFIG_ARCHITECTURE_ANALYSIS.md  CONFIG_CLEANUP_REPORT.md  CONFIG_FIX_REPORT.md  CONFIG_UPDATE_FINAL.md  CONFIG_UPDATE_GUIDE.md  CONFIG_USAGE_VERIFICATION.md  CORTEX_DATA_DIR_CONFIG_SOLUTION.md  CORTEX_MEMORY_ARCHITECTURE_IMPROVEMENT.md  CORTEX_MEMORY_DIMENSIONS_GUIDE.md  CORTEX_MEMORY_TENANT_ISOLATION_FINAL.md  Cargo.toml  DATA_DIR_DUPLICATION_FIX.md  DEAD_CODE_CLEANUP_ANALYSIS.md  DOCS_UPDATE_SUMMARY.md  L0_L1_L2_GENERATION_ISSUE_ANALYSIS.md  L0_L1_L2_LAYERED_LOADING_EXPLAINED.md  LLM_BASED_GENERATION_GUIDE.md  LLM_CONFIGURATION_FIX.md  LLM_GENERATION_IMPLEMENTATION_SUMMARY.md  MEMORY_FIX_REPORT.md  MEMORY_RETRIEVAL_FIX.md  MIGRATION_SUMMARY.md  MULTI_TURN_STREAMING_FIX.md  OPENVIKING_REFACTORING_COMPLETE_REPORT.md  OPENVIKING_STYLE_TOOLS_API.md  PROJECT_EVALUATION_REPORT.md  PROJECT_STATUS.md  README.md  README_zh.md  REFACTORING_PLAN.md  SCOPE_NORMALIZATION_FIX.md  TARS_DATA_STORAGE_VALIDATION.md  TARS_DATA_STORAGE_VERIFICATION.md  (+19 more)
.ai-context/: modules.md  (+6 more)
cortex-mem-cli/: Cargo.toml  README.md  TESTING_GUIDE.md  demo.sh  quick-test.sh  test_cli.sh
cortex-mem-cli/src/: main.rs
cortex-mem-cli/src/commands/: add.rs  automation.rs  delete.rs  get.rs  layers.rs  list.rs  mod.rs  optimize.rs  search.rs  session.rs  stats.rs  tenant.rs  vector.rs
cortex-mem-cli/tests/: cli_commands_test.rs
cortex-mem-core/: Cargo.toml  README.md
cortex-mem-core/src/: builder.rs  cascade_layer_debouncer.rs  cascade_layer_updater.rs  config.rs  error.rs  incremental_memory_updater.rs  lib.rs  logging.rs  memory_cleanup.rs  memory_event_coordinator.rs  memory_index.rs  memory_index_manager.rs  types.rs  vector_sync_manager.rs
cortex-mem-core/src/automation/: auto_extract.rs  indexer.rs  indexer_tests.rs  layer_generator.rs  manager.rs  mod.rs  sync.rs  watcher.rs
cortex-mem-core/src/embedding/: client.rs  mod.rs
cortex-mem-core/src/extraction/: extractor.rs  mod.rs  types.rs  user_profile.rs
cortex-mem-core/src/filesystem/: mod.rs  operations.rs  uri.rs
cortex-mem-core/src/index/: fulltext.rs  mod.rs  sqlite.rs
cortex-mem-core/src/init/: mod.rs
cortex-mem-core/src/layers/: generator.rs  manager.rs  mod.rs  tests_llm.rs
cortex-mem-core/src/llm/: client.rs  mod.rs  prompts.rs
cortex-mem-core/src/memory/: classification.rs  execution_engine.rs  extractor.rs  importance.rs  manager.rs  mod.rs  optimization_analyzer.rs  optimization_detector.rs  optimization_plan.rs  optimizer.rs  result_reporter.rs  updater.rs  utils.rs
cortex-mem-core/src/retrieval/: engine.rs  intent.rs  mod.rs  relevance.rs
cortex-mem-core/src/search/: mod.rs  vector_engine.rs  vector_search_tests.rs  weight_model.rs
cortex-mem-core/src/session/: extraction.rs  manager.rs  message.rs  mod.rs  participant.rs  timeline.rs
cortex-mem-core/src/types/: optimization.rs
cortex-mem-core/src/vector_store/: mod.rs  qdrant.rs
cortex-mem-core/tests/: layered_search_test.rs
cortex-mem-mcp/: Cargo.toml  README.md  test-mcp.sh
cortex-mem-mcp/examples/: config.example.toml  minimal_service_test.rs
cortex-mem-mcp/skill/: SKILL.md
cortex-mem-mcp/src/: lib.rs  main.rs  server.rs  service.rs
cortex-mem-rig/: CHANGELOG.md  Cargo.toml  README.md
cortex-mem-rig/examples/: memory_tools_example.rs
cortex-mem-rig/src/: lib.rs  processor.rs  simplified.rs  tool.rs
cortex-mem-rig/src/tools/: mod.rs
cortex-mem-service/: Cargo.toml  Dockerfile  README.md  test-vector-search.sh  test.sh
cortex-mem-service/src/: error.rs  handlers.rs  main.rs  models.rs  optimization_handlers.rs  state.rs
cortex-mem-service/src/handlers/: automation.rs  filesystem.rs  health.rs  mod.rs  search.rs  search_integration_tests.rs  sessions.rs  tenants.rs
cortex-mem-service/src/routes/: automation.rs  filesystem.rs  mod.rs  search.rs  sessions.rs  tenants.rs
cortex-mem-tools/: Cargo.toml  README.md
cortex-mem-tools/src/: errors.rs  lib.rs  mcp_tools.rs  operations.rs  types.rs
cortex-mem-tools/src/docs/: ls.md
cortex-mem-tools/src/mcp/: definitions.rs
cortex-mem-tools/src/tools/: filesystem.rs  mod.rs  search.rs  storage.rs  tiered.rs
cortex-mem-tools/tests/: core_functionality_tests.rs  llm_integration_tests.rs
examples/cortex-mem-evaluation/: .gitignore  Cargo.toml  PROJECT_STATUS.md  README.md  run_examples.sh  run_real_evaluation.sh  test_memory_manager.rs
examples/cortex-mem-evaluation/config/: evaluation_config.toml  evaluation_config_qdrant.toml  memory_evaluation_config.toml  memory_manager_config.toml  minimal_config.toml  real_evaluation_config.toml  simple_evaluation_config.toml
examples/cortex-mem-evaluation/examples/: basic_integration.rs
examples/cortex-mem-evaluation/scripts/: run_evaluation.sh
examples/cortex-mem-evaluation/src/: main.rs
examples/cortex-mem-tars/: .gitignore  Cargo.toml  MIGRATION_COMPLETE.md  MIGRATION_V2_REPORT.md  README.md  V2_MIGRATION_COMPLETE.md  V2_MIGRATION_FINAL.md  config.example.toml
examples/cortex-mem-tars-new/: Cargo.toml  README.md  test.rs
examples/cortex-mem-tars-new/docs/: tui-implementation.md
examples/cortex-mem-tars-new/src/: agent.rs  app.rs  config.rs  lib.rs  logger.rs  main.rs  ui.rs
examples/cortex-mem-tars/src/: agent.rs  api_models.rs  api_server.rs  app.rs  audio_input.rs  audio_transcription.rs  audio_vad.rs  config.rs  infrastructure.rs  lib.rs  log_monitor.rs  logger.rs  main.rs  ui.rs
examples/memory-tools-refactor/: Cargo.toml  README.md
examples/memory-tools-refactor/src/: main.rs
examples/multi-round-interactive/: Cargo.toml  test_log_monitoring.sh
examples/multi-round-interactive/src/: agent.rs  app.rs  events.rs  log_monitor.rs  main.rs  terminal.rs  ui.rs
memo-cli/: Cargo.toml
memo-cli/src/: main.rs
memo-rig/: Cargo.toml
memo-rig/src/: lib.rs  processor.rs  tool.rs
memo-service/: Cargo.toml
memo-service/src/: handlers.rs  main.rs  models.rs
(+359 files in other folders)
