[workspace]
resolver = "2"
members = [
    "cortex-mem-core",
    "cortex-mem-config",
    "cortex-mem-tools",
    "cortex-mem-rig",
    "cortex-mem-service",
    "cortex-mem-cli",
    "cortex-mem-mcp",
    "examples/cortex-mem-tars"
]

[workspace.package]
version = "2.0.0"
edition = "2024"
rust-version = "1.86"
authors = ["Sopaco"]
license = "MIT"
repository = "https://github.com/sopaco/cortex-mem"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# LLM framework
rig-core = "0.23"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait
async-trait = "0.1"

# File system
walkdir = "2.4"

# Markdown
pulldown-cmark = "0.11"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"

# Testing
tokio-test = "0.4"

# Web framework (for cortex-mem-service)
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
