[package]
name = "cortex-mem-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cortex-mem"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
cortex-mem-core = { path = "../cortex-mem-core" }
cortex-mem-tools = { path = "../cortex-mem-tools" }
cortex-mem-config = { path = "../cortex-mem-config" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }