[package]
name = "cortex-mem-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
rig-core = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
tantivy = { workspace = true }

# Optional dependencies for features
qdrant-client = { version = "1.11", optional = true }
dyn-clone = { version = "1.0", optional = true }

[features]
default = []
vector-search = ["qdrant-client", "dyn-clone"]

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.10"
