[package]
name = "cortex-mem-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for memo-core memory management system"
license = "MIT"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# MCP SDK
rmcp = { version = "0.10", features = ["server", "transport-io"] }
schemars = { version = "1.0", features = ["derive"] }

# Local dependencies
memo-core = { path = "../memo-core" }
memo-config = { path = "../memo-config" }

# Logging
tracing-subscriber = { workspace = true }

[[bin]]
name = "cortex-mem-mcp"
path = "src/main.rs"

[[example]]
name = "minimal_service_test"
path = "examples/minimal_service_test.rs"
