[package]
name = "cortex-mem-mcp"
version.workspace = true
edition.workspace = true
authors = ["Cortex-Mem Contributors"]
description = "MCP server for Cortex-Mem memory management"
license = "MIT"

[[bin]]
name = "cortex-mem-mcp"
path = "src/main.rs"

[dependencies]
# Local dependencies
cortex-mem-core = { path = "../cortex-mem-core" }

# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
uuid = { workspace = true }
chrono = { workspace = true }

# MCP SDK
rmcp = { version = "0.14", features = ["server", "transport-io"] }
schemars = { version = "1.0", features = ["derive"] }

# CLI framework  
clap = { workspace = true }

# Directory utilities
dirs = "5.0"

# Environment and config
dotenv = "0.15"
toml = "0.9"

[features]
default = []
vector-search = ["cortex-mem-core/vector-search"]
