[package]
name = "cortex-mem-rig"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Rig framework integration for Rust agent memory system"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rig-core = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Local dependencies
cortex-mem-core = { path = "../cortex-mem-core" }
cortex-mem-config = { path = "../cortex-mem-config" }
# cortex-mem-tools = { path = "../cortex-mem-tools" }  # 暂时禁用，等V2适配完成



[features]
default = []
examples = []
