[package]
name = "cortex-mem-rig"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rig framework integration for Cortex-Mem V2 (simplified)"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Local dependencies
cortex-mem-core = { path = "../cortex-mem-core" }
cortex-mem-tools = { path = "../cortex-mem-tools" }

[features]
default = []
vector-search = ["cortex-mem-core/vector-search", "cortex-mem-tools/vector-search"]
