[package]
name = "cortex-mem-rig"
version = "2.0.0"
edition = "2024"
license = "MIT"
description = "Rig framework integration for Cortex Memory V2"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Async trait
async-trait = "0.1"

# Rig framework
rig-core = { workspace = true }

# Local dependencies
cortex-mem-core = { path = "../cortex-mem-core" }
cortex-mem-tools = { path = "../cortex-mem-tools" }

[features]
default = []
