[package]
name = "cortex-mem-service"
version = "0.1.0"
edition = "2024"
description = "HTTP API service for Rust agent memory system"
license = "MIT"

[[bin]]
name = "cortex-mem-service"
path = "src/main.rs"

[dependencies]
cortex-mem-config = { path = "../cortex-mem-config" }
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
clap = { workspace = true }

# Local dependencies
cortex-mem-core = { path = "../cortex-mem-core" }
