[package]
name = "cortex-mem-service"
version = "2.0.0"
edition = "2024"
authors.workspace = true
license.workspace = true
description = "HTTP REST API service for Cortex-Mem V2"

[[bin]]
name = "cortex-mem-service"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
cortex-mem-core = { path = "../cortex-mem-core" }
cortex-mem-config = { path = "../cortex-mem-config" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }

# CLI
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
http-body-util = "0.1"
futures = { workspace = true }

[features]
default = []
