[package]
name = "cortex-mem-tools"
version = "0.1.0"
edition = "2024"
description = "Shared memory tools for cortex-mem system"
license = "MIT"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Local dependencies
cortex-mem-core = { path = "../cortex-mem-core" }
cortex-mem-config = { path = "../cortex-mem-config" }

# Additional dependencies
schemars = { version = "1.0", features = ["derive"] }
async-trait = { workspace = true }

[features]
default = []
