[package]
name = "cortex-mem-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-level tools and utilities for Cortex-Mem V2"

[dependencies]
# Local dependencies
cortex-mem-core = { path = "../cortex-mem-core" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

[features]
default = []
vector-search = ["cortex-mem-core/vector-search"]
