[package]
name = "memo-cli"
version = "0.1.0"
edition = "2024"
description = "Command line interface for Rust agent memory system"
license = "MIT"

[[bin]]
name = "memo"
path = "src/main.rs"

[dependencies]
memo-config = { path = "../memo-config" }
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }

# Local dependencies
memo-core = { path = "../memo-core" }

# CLI specific dependencies
tabled = "0.15"
colored = "2.0"
dialoguer = "0.11"
