[package]
name = "memo-rig"
version = "0.1.0"
edition = "2024"
description = "Rig framework integration for Rust agent memory system"
license = "MIT"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rig-core = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Local dependencies
memo-core = { path = "../memo-core" }
memo-config = { path = "../memo-config" }



[features]
default = []
examples = []
