[package]
name = "memo-service"
version = "0.1.0"
edition = "2024"
description = "HTTP API service for Rust agent memory system"
license = "MIT"

[[bin]]
name = "memo-service"
path = "src/main.rs"

[dependencies]
memo-config = { path = "../memo-config" }
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
clap = { workspace = true }

# Local dependencies
memo-core = { path = "../memo-core" }
