[package]
name = "cortex-mem-evaluation"
version = "0.1.0"
edition = "2024"
description = "Evaluation framework for Cortex-Mem core capabilities"
authors = ["Cortex-Mem Team"]
license = "MIT"
repository = "https://github.com/sopaco/cortex-mem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-mem-core = { path = "../../cortex-mem-core" }
cortex-mem-config = { path = "../../cortex-mem-config" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
indicatif = "0.17"  # 进度条
rayon = "1.8"       # 并行处理
csv = "1.3"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
plotters = "0.3"    # 图表生成
statrs = "0.16"     # 统计计算
config = "0.15"     # 配置管理
sha2 = "0.10"       # 哈希计算
async-trait = "0.1" # 异步trait支持

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "cortex-mem-evaluation"
path = "src/main.rs"
