[package]
name = "cortex-mem-tars"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
tui-markdown = "0.3.7"
ratatui-core = "0.1"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
log = "0.4"
env_logger = "0.11"
tui-textarea = "0.7"
unicode-width = "0.2"
uuid = { version = "1.10", features = ["v4"] }
async-trait = "0.1"
tokio = { version = "1.40", features = ["full"] }
clipboard = "0.5"
