[package]
name = "cortex-mem-tars"
version = "1.0.0"
edition = "2024"
description = "A TUI demo application for demonstrating and testing the core features of Cortex Memory"
license = "MIT"

[dependencies]
cortex-mem-config = { path = "../../cortex-mem-config" }
clap = { workspace = true, features = ["derive"] }
# Workspace dependencies from parent
cortex-mem-core = { path = "../../cortex-mem-core" }
cortex-mem-rig = { path = "../../cortex-mem-rig" }

# Runtime
tokio = { workspace = true, features = ["full"] }

# LLM framework
rig-core = "0.23"

# TUI
ratatui = "0.29"
crossterm = "0.29"
unicode-width = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21"

# Async traits
async-trait = "0.1"

# JSON处理
serde_json = "1.0"

# Stream processing
futures = "0.3"
async-stream = "0.3"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }
