[package]
name = "cortex-mem-tars"
version = "2.0.0"
edition = "2021"
description = "TARS - Personal Assistant Demo based on Cortex Memory V2"
authors = ["Cortex Memory Team"]
license = "MIT"

[workspace]

[dependencies]
# Cortex Memory V2 dependencies
cortex-mem-core = { path = "../../cortex-mem-core", features = ["vector-search"] }
cortex-mem-tools = { path = "../../cortex-mem-tools", features = ["vector-search"] }

# LLM framework
rig-core = "0.23"

# TUI
ratatui = "0.29"
tui-markdown = "0.3"
ratatui-core = "0.1"
crossterm = "0.28"
tui-textarea = "0.7"
unicode-width = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Error handling
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# File system
directories = "6.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21"

# Async
async-trait = "0.1"
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-stream = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# HTTP server
axum = { version = "0.7", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Utilities
uuid = { version = "1.10", features = ["v4"] }
clipboard = "0.5"

# CLI
clap = { version = "4.5", features = ["derive"] }

[features]
default = []
vector-search = ["cortex-mem-core/vector-search", "cortex-mem-tools/vector-search"]
