[package]
name = "memory-tools-refactor"
version = "1.0.0"
edition = "2024"

[dependencies]
# Core dependencies
cortex-mem-core = { path = "../../cortex-mem-core" }
cortex-mem-config = { path = "../../cortex-mem-config" }
cortex-mem-tools = { path = "../../cortex-mem-tools" }

# Testing utilities
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Mock dependencies for testing
async-trait = "0.1"
uuid = { workspace = true }
chrono = { workspace = true }
