[package]
name = "multi-round-interactive"
version = "0.1.0"
edition = "2024"

[dependencies]
memo-config = { path = "../../memo-config" }
clap = { workspace = true, features = ["derive"] }
# Workspace dependencies from parent
memo-core = { path = "../../memo-core" }
memo-rig = { path = "../../memo-rig" }

# Runtime
tokio = { workspace = true, features = ["full"] }

# LLM framework
rig-core = "0.23"

# TUI
ratatui = "0.29"
crossterm = "0.29"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21"

# Async traits
async-trait = "0.1"
